--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body {
     max-width: 800px
     padding:0;
     @media(max-width: 800px) {
-  .container {max-width: 100%; padding: 0 ;
+  .container {width: 100%; padding: 0 ;
  box-sizing: border-box;
   }
 }
@@ -30,7 +30,7 @@ header {
     max-width: 800px
     padding:  0;
     @media(max-width: 800px) {
-  .container {max-width: 100%; padding: 0 ;
+  .container {width: 100%; padding: 0 ;
    box-sizing: border-box;}
 }
 }
@@ -119,7 +119,7 @@ img {
   font-family: 'Times new Roman';
 }
 .item {
-  width: 40%;
+  width: 45%;
   display: inline-block;
   margin-top: 2rem;
   filter: grayscale(100%);
