--- a/styles.css
+++ b/styles.css
@@ -16,8 +16,7 @@ body {
     max-width: 800px
     padding:0;
     @media(max-width: 800px) {
-  .container {width: 100%; padding: 0 ;
- box-sizing: border-box;
+  .container {max-width: 100%; padding: 0 ;
   }
 }
     color: #ffffff;
@@ -30,8 +29,7 @@ header {
     max-width: 800px
     padding:  0;
     @media(max-width: 800px) {
-  .container {width: 100%; padding: 0 ;
-   box-sizing: border-box;}
+  .container {max-width: 100%; padding: 0 ;}
 }
 }
 nav {
@@ -55,6 +53,9 @@ nav ul li a {
 }
 main {
     max-width: 800px;
+     @media(max-width: 800px) {
+  .container {max-width: 100%; padding: 0 ;}
+}
     margin: 0 auto;
     padding: 20px;
     background-color: #FBEEC1;
@@ -83,7 +84,6 @@ img {
 
 .beauty-rotate {
   width: 40%;
-  height: 300px;
   border: 4px double #bd6c46; /* Рамка */
   overflow: hidden;
   -webkit-transition: all 0.5s ease;
