--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@ nav ul {
 }
 nav ul li {
     display: inline-block;
-    margin-right: 20px;
+    
 }
 nav ul li a {
     text-decoration: none;
@@ -54,7 +54,7 @@ nav ul li a {
 main {
     max-width: 800px;
      @media(max-width: 800px) {
-  .container {max-width: 100%; padding: 0 ;}
+  .container {max-width: 100%; box-sizing: border-box; padding: 0 ;}
 }
     margin: 0 auto;
     padding: 20px;
@@ -71,7 +71,7 @@ footer {
     background-color: #DAAD8;
     color: white;
     text-align: center;
-    padding: 10px 0;
+    padding:  0;
 }
 
 p {
